--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,39 @@
     animation: dot-animation 1s linear infinite alternate;
   }
   
+  .center {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.file-input-label {
+  display: block;
+  text-align: center;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.file-input {
+  display: none;
+}
+
+.file-input-label::before {
+  content: 'Choose File';
+  display: inline-block;
+  background-color: #007bff;
+  color: white;
+  padding: 5px 10px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.file-input-label:hover::before {
+  background-color: #0069d9;
+}
+
+  
   h2:before {
     right: -15px;
   }
